myanalyzer.output
Terminals unused in grammar

   TK_KW_MAIN
   TK_OPEN_BRACKET
   TK_CLOSE_BRACKET


Grammar

    0 $accept: fc_body $end

    1 fc_body: variables_declaration functio_declaration

    2 functio_declaration: function
    3                    | functio_declaration function

    4 variables_declaration: %empty
    5                      | variables_declaration variables

    6 variables: type TK_ID more_variables TK_SEMICOLON
    7          | type TK_ID assignment more_variables TK_SEMICOLON
    8          | TK_KW_STATIC type TK_ID more_variables TK_SEMICOLON
    9          | TK_KW_STATIC type TK_ID assignment more_variables TK_SEMICOLON

   10 type: TK_KW_INTEGER
   11     | TK_KW_BOOLEAN
   12     | TK_KW_CHARACTER
   13     | TK_KW_REAL
   14     | TK_KW_STRING

   15 assignment: TK_ASSGN sign TK_INT_POS_CONST
   16           | TK_ASSGN boolean
   17           | TK_ASSGN characters
   18           | TK_ASSGN sign TK_REAL_POST_CONST

   19 boolean: TK_KW_TRUE
   20        | TK_KW_FALSE

   21 sign: %empty
   22     | TK_OP_PLUS
   23     | TK_OP_MINUS

   24 characters: TK_CONST_CHAR
   25           | TK_CONST_STR

   26 more_variables: %empty
   27               | TK_COMMA TK_ID assignment more_variables
   28               | TK_COMMA TK_ID more_variables

   29 function: type TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END
   30         | TK_KW_VOID TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

   31 function_variables: %empty
   32                   | type TK_ID function_variables_list

   33 function_variables_list: %empty
   34                        | TK_COMMA type TK_ID function_variables_list

   35 function_body: variables function_body
   36              | statements

   37 expression: TK_INT_POS_CONST
   38           | TK_KW_TRUE
   39           | TK_KW_FALSE
   40           | TK_CONST_CHAR
   41           | TK_REAL_POST_CONST
   42           | TK_CONST_STR
   43           | TK_KW_NOT expression
   44           | TK_OP_LO_NOT expression
   45           | TK_OP_PLUS expression
   46           | TK_OP_MINUS expression
   47           | expression TK_OP_MULT expression
   48           | expression TK_OP_DIV expression
   49           | expression TK_KW_MOD expression
   50           | expression TK_OP_PLUS expression
   51           | expression TK_OP_MINUS expression
   52           | expression TK_OP_EQUAL expression
   53           | expression TK_OP_EQUAL_NOT expression
   54           | expression TK_OP_SMALLER expression
   55           | expression TK_OP_GREATER expression
   56           | expression TK_OP_EQUAL_SMALLER expression
   57           | expression TK_OP_EQUAL_GREATER expression
   58           | expression TK_KW_AND expression
   59           | expression TK_OP_LO_AND expression
   60           | expression TK_KW_OR expression
   61           | expression TK_OP_LO_OR expression
   62           | TK_ID
   63           | TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS
   64           | TK_ID TK_OPEN_PARENTHESIS expressions TK_CLOSE_PARENTHESIS
   65           | FCLIB_READ_STRING TK_OPEN_PARENTHESIS TK_CLOSE_PARENTHESIS
   66           | FCLIB_READ_INTEGER TK_OPEN_PARENTHESIS TK_CLOSE_PARENTHESIS
   67           | FCLIB_READ_REAL TK_OPEN_PARENTHESIS TK_CLOSE_PARENTHESIS

   68 expressions: %empty
   69            | expression
   70            | expression TK_COMMA expressions

   71 statements: %empty
   72           | statement statements

   73 statement: TK_SEMICOLON
   74          | TK_KW_BEGIN statements TK_KW_END
   75          | TK_KW_FOR TK_OPEN_PARENTHESIS TK_ID TK_ASSGN expression TK_SEMICOLON TK_ID TK_ASSGN expression TK_CLOSE_PARENTHESIS statement
   76          | TK_KW_FOR TK_OPEN_PARENTHESIS TK_ID TK_ASSGN expression TK_SEMICOLON expression TK_SEMICOLON TK_ID TK_ASSGN expression TK_CLOSE_PARENTHESIS statement
   77          | TK_KW_WHILE TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS statement
   78          | TK_KW_DO statement TK_KW_WHILE TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS TK_SEMICOLON
   79          | TK_KW_IF TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS statement
   80          | TK_KW_IF TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS statement TK_KW_ELSE statement
   81          | TK_KW_BREAK TK_SEMICOLON
   82          | TK_KW_CONTINUE TK_SEMICOLON
   83          | TK_KW_RETURN expression TK_SEMICOLON
   84          | TK_ID TK_OPEN_PARENTHESIS expressions TK_CLOSE_PARENTHESIS TK_SEMICOLON
   85          | TK_ID TK_ASSGN expression TK_SEMICOLON
   86          | FCLIB_WRITE_STRING TK_OPEN_PARENTHESIS characters TK_CLOSE_PARENTHESIS
   87          | FCLIB_WRITE_INTEGER TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS
   88          | FCLIB_WRITE_REAL TK_OPEN_PARENTHESIS expression TK_CLOSE_PARENTHESIS


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_ID (258) 6 7 8 9 27 28 29 30 32 34 62 64 75 76 84 85
TK_INT_POS_CONST (259) 15 37
TK_REAL_POST_CONST (260) 18 41
TK_ASSGN (261) 15 16 17 18 75 76 85
TK_OPEN_PARENTHESIS (262) 29 30 63 64 65 66 67 75 76 77 78 79 80 84
    86 87 88
TK_CLOSE_PARENTHESIS (263) 29 30 63 64 65 66 67 75 76 77 78 79 80 84
    86 87 88
TK_SEMICOLON (264) 6 7 8 9 73 75 76 78 81 82 83 84 85
TK_CONST_STR (265) 25 42
TK_CONST_CHAR (266) 24 40
TK_KW_STATIC (267) 8 9
TK_KW_BOOLEAN (268) 11
TK_KW_INTEGER (269) 10
TK_KW_CHARACTER (270) 12
TK_KW_REAL (271) 13
TK_KW_VOID (272) 30
TK_KW_MAIN (273)
TK_KW_TRUE (274) 19 38
TK_KW_FALSE (275) 20 39
TK_KW_STRING (276) 14
TK_KW_WHILE (277) 77 78
TK_KW_DO (278) 78
TK_KW_BREAK (279) 81
TK_KW_CONTINUE (280) 82
TK_KW_RETURN (281) 83
TK_KW_BEGIN (282) 29 30 74
TK_KW_IF (283) 79 80
TK_KW_ELSE (284) 80
TK_KW_FOR (285) 75 76
TK_KW_END (286) 29 30 74
TK_KW_OR (287) 60
TK_KW_NOT (288) 43
TK_KW_AND (289) 58
TK_KW_MOD (290) 49
TK_OP_EQUAL (291) 52
TK_OP_EQUAL_GREATER (292) 57
TK_OP_EQUAL_SMALLER (293) 56
TK_OP_GREATER (294) 55
TK_OP_SMALLER (295) 54
TK_OP_EQUAL_NOT (296) 53
TK_OP_LO_AND (297) 59
TK_OP_LO_OR (298) 61
TK_OP_LO_NOT (299) 44
TK_OPEN_BRACKET (300)
TK_CLOSE_BRACKET (301)
TK_COMMA (302) 27 28 34 70
FCLIB_READ_STRING (303) 65
FCLIB_READ_INTEGER (304) 66
FCLIB_READ_REAL (305) 67
FCLIB_WRITE_STRING (306) 86
FCLIB_WRITE_INTEGER (307) 87
FCLIB_WRITE_REAL (308) 88
TK_OP_PLUS (309) 22 45 50
TK_OP_MINUS (310) 23 46 51
TK_OP_MULT (311) 47
TK_OP_DIV (312) 48
UNARYMINUS (313)
UNARYPLUS (314)
NO_ELSE (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
fc_body (62)
    on left: 1, on right: 0
functio_declaration (63)
    on left: 2 3, on right: 1 3
variables_declaration (64)
    on left: 4 5, on right: 1 5
variables (65)
    on left: 6 7 8 9, on right: 5 35
type (66)
    on left: 10 11 12 13 14, on right: 6 7 8 9 29 32 34
assignment (67)
    on left: 15 16 17 18, on right: 7 9 27
boolean (68)
    on left: 19 20, on right: 16
sign (69)
    on left: 21 22 23, on right: 15 18
characters (70)
    on left: 24 25, on right: 17 86
more_variables (71)
    on left: 26 27 28, on right: 6 7 8 9 27 28
function (72)
    on left: 29 30, on right: 2 3
function_variables (73)
    on left: 31 32, on right: 29 30
function_variables_list (74)
    on left: 33 34, on right: 32 34
function_body (75)
    on left: 35 36, on right: 29 30 35
expression (76)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67, on right: 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 63 69 70 75 76 77 78
    79 80 83 85 87 88
expressions (77)
    on left: 68 69 70, on right: 64 70 84
statements (78)
    on left: 71 72, on right: 36 72 74
statement (79)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88, on right:
    72 75 76 77 78 79 80


State 0

    0 $accept: . fc_body $end
    1 fc_body: . variables_declaration functio_declaration
    4 variables_declaration: . %empty
    5                      | . variables_declaration variables

    $default  reduce using rule 4 (variables_declaration)

    fc_body                go to state 1
    variables_declaration  go to state 2


State 1

    0 $accept: fc_body . $end

    $end  shift, and go to state 3


State 2

    1 fc_body: variables_declaration . functio_declaration
    2 functio_declaration: . function
    3                    | . functio_declaration function
    5 variables_declaration: variables_declaration . variables
    6 variables: . type TK_ID more_variables TK_SEMICOLON
    7          | . type TK_ID assignment more_variables TK_SEMICOLON
    8          | . TK_KW_STATIC type TK_ID more_variables TK_SEMICOLON
    9          | . TK_KW_STATIC type TK_ID assignment more_variables TK_SEMICOLON
   10 type: . TK_KW_INTEGER
   11     | . TK_KW_BOOLEAN
   12     | . TK_KW_CHARACTER
   13     | . TK_KW_REAL
   14     | . TK_KW_STRING
   29 function: . type TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END
   30         | . TK_KW_VOID TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_KW_STATIC     shift, and go to state 4
    TK_KW_BOOLEAN    shift, and go to state 5
    TK_KW_INTEGER    shift, and go to state 6
    TK_KW_CHARACTER  shift, and go to state 7
    TK_KW_REAL       shift, and go to state 8
    TK_KW_VOID       shift, and go to state 9
    TK_KW_STRING     shift, and go to state 10

    functio_declaration  go to state 11
    variables            go to state 12
    type                 go to state 13
    function             go to state 14


State 3

    0 $accept: fc_body $end .

    $default  accept


State 4

    8 variables: TK_KW_STATIC . type TK_ID more_variables TK_SEMICOLON
    9          | TK_KW_STATIC . type TK_ID assignment more_variables TK_SEMICOLON
   10 type: . TK_KW_INTEGER
   11     | . TK_KW_BOOLEAN
   12     | . TK_KW_CHARACTER
   13     | . TK_KW_REAL
   14     | . TK_KW_STRING

    TK_KW_BOOLEAN    shift, and go to state 5
    TK_KW_INTEGER    shift, and go to state 6
    TK_KW_CHARACTER  shift, and go to state 7
    TK_KW_REAL       shift, and go to state 8
    TK_KW_STRING     shift, and go to state 10

    type  go to state 15


State 5

   11 type: TK_KW_BOOLEAN .

    $default  reduce using rule 11 (type)


State 6

   10 type: TK_KW_INTEGER .

    $default  reduce using rule 10 (type)


State 7

   12 type: TK_KW_CHARACTER .

    $default  reduce using rule 12 (type)


State 8

   13 type: TK_KW_REAL .

    $default  reduce using rule 13 (type)


State 9

   30 function: TK_KW_VOID . TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_ID  shift, and go to state 16


State 10

   14 type: TK_KW_STRING .

    $default  reduce using rule 14 (type)


State 11

    1 fc_body: variables_declaration functio_declaration .  [$end]
    3 functio_declaration: functio_declaration . function
   10 type: . TK_KW_INTEGER
   11     | . TK_KW_BOOLEAN
   12     | . TK_KW_CHARACTER
   13     | . TK_KW_REAL
   14     | . TK_KW_STRING
   29 function: . type TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END
   30         | . TK_KW_VOID TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_KW_BOOLEAN    shift, and go to state 5
    TK_KW_INTEGER    shift, and go to state 6
    TK_KW_CHARACTER  shift, and go to state 7
    TK_KW_REAL       shift, and go to state 8
    TK_KW_VOID       shift, and go to state 9
    TK_KW_STRING     shift, and go to state 10

    $default  reduce using rule 1 (fc_body)

    type      go to state 17
    function  go to state 18


State 12

    5 variables_declaration: variables_declaration variables .

    $default  reduce using rule 5 (variables_declaration)


State 13

    6 variables: type . TK_ID more_variables TK_SEMICOLON
    7          | type . TK_ID assignment more_variables TK_SEMICOLON
   29 function: type . TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_ID  shift, and go to state 19


State 14

    2 functio_declaration: function .

    $default  reduce using rule 2 (functio_declaration)


State 15

    8 variables: TK_KW_STATIC type . TK_ID more_variables TK_SEMICOLON
    9          | TK_KW_STATIC type . TK_ID assignment more_variables TK_SEMICOLON

    TK_ID  shift, and go to state 20


State 16

   30 function: TK_KW_VOID TK_ID . TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_OPEN_PARENTHESIS  shift, and go to state 21


State 17

   29 function: type . TK_ID TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_ID  shift, and go to state 22


State 18

    3 functio_declaration: functio_declaration function .

    $default  reduce using rule 3 (functio_declaration)


State 19

    6 variables: type TK_ID . more_variables TK_SEMICOLON
    7          | type TK_ID . assignment more_variables TK_SEMICOLON
   15 assignment: . TK_ASSGN sign TK_INT_POS_CONST
   16           | . TK_ASSGN boolean
   17           | . TK_ASSGN characters
   18           | . TK_ASSGN sign TK_REAL_POST_CONST
   26 more_variables: . %empty  [TK_SEMICOLON]
   27               | . TK_COMMA TK_ID assignment more_variables
   28               | . TK_COMMA TK_ID more_variables
   29 function: type TK_ID . TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_ASSGN             shift, and go to state 23
    TK_OPEN_PARENTHESIS  shift, and go to state 24
    TK_COMMA             shift, and go to state 25

    $default  reduce using rule 26 (more_variables)

    assignment      go to state 26
    more_variables  go to state 27


State 20

    8 variables: TK_KW_STATIC type TK_ID . more_variables TK_SEMICOLON
    9          | TK_KW_STATIC type TK_ID . assignment more_variables TK_SEMICOLON
   15 assignment: . TK_ASSGN sign TK_INT_POS_CONST
   16           | . TK_ASSGN boolean
   17           | . TK_ASSGN characters
   18           | . TK_ASSGN sign TK_REAL_POST_CONST
   26 more_variables: . %empty  [TK_SEMICOLON]
   27               | . TK_COMMA TK_ID assignment more_variables
   28               | . TK_COMMA TK_ID more_variables

    TK_ASSGN  shift, and go to state 23
    TK_COMMA  shift, and go to state 25

    $default  reduce using rule 26 (more_variables)

    assignment      go to state 28
    more_variables  go to state 29


State 21

   10 type: . TK_KW_INTEGER
   11     | . TK_KW_BOOLEAN
   12     | . TK_KW_CHARACTER
   13     | . TK_KW_REAL
   14     | . TK_KW_STRING
   30 function: TK_KW_VOID TK_ID TK_OPEN_PARENTHESIS . function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END
   31 function_variables: . %empty  [TK_CLOSE_PARENTHESIS]
   32                   | . type TK_ID function_variables_list

    TK_KW_BOOLEAN    shift, and go to state 5
    TK_KW_INTEGER    shift, and go to state 6
    TK_KW_CHARACTER  shift, and go to state 7
    TK_KW_REAL       shift, and go to state 8
    TK_KW_STRING     shift, and go to state 10

    $default  reduce using rule 31 (function_variables)

    type                go to state 30
    function_variables  go to state 31


State 22

   29 function: type TK_ID . TK_OPEN_PARENTHESIS function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_OPEN_PARENTHESIS  shift, and go to state 24


State 23

   15 assignment: TK_ASSGN . sign TK_INT_POS_CONST
   16           | TK_ASSGN . boolean
   17           | TK_ASSGN . characters
   18           | TK_ASSGN . sign TK_REAL_POST_CONST
   19 boolean: . TK_KW_TRUE
   20        | . TK_KW_FALSE
   21 sign: . %empty  [TK_INT_POS_CONST, TK_REAL_POST_CONST]
   22     | . TK_OP_PLUS
   23     | . TK_OP_MINUS
   24 characters: . TK_CONST_CHAR
   25           | . TK_CONST_STR

    TK_CONST_STR   shift, and go to state 32
    TK_CONST_CHAR  shift, and go to state 33
    TK_KW_TRUE     shift, and go to state 34
    TK_KW_FALSE    shift, and go to state 35
    TK_OP_PLUS     shift, and go to state 36
    TK_OP_MINUS    shift, and go to state 37

    $default  reduce using rule 21 (sign)

    boolean     go to state 38
    sign        go to state 39
    characters  go to state 40


State 24

   10 type: . TK_KW_INTEGER
   11     | . TK_KW_BOOLEAN
   12     | . TK_KW_CHARACTER
   13     | . TK_KW_REAL
   14     | . TK_KW_STRING
   29 function: type TK_ID TK_OPEN_PARENTHESIS . function_variables TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END
   31 function_variables: . %empty  [TK_CLOSE_PARENTHESIS]
   32                   | . type TK_ID function_variables_list

    TK_KW_BOOLEAN    shift, and go to state 5
    TK_KW_INTEGER    shift, and go to state 6
    TK_KW_CHARACTER  shift, and go to state 7
    TK_KW_REAL       shift, and go to state 8
    TK_KW_STRING     shift, and go to state 10

    $default  reduce using rule 31 (function_variables)

    type                go to state 30
    function_variables  go to state 41


State 25

   27 more_variables: TK_COMMA . TK_ID assignment more_variables
   28               | TK_COMMA . TK_ID more_variables

    TK_ID  shift, and go to state 42


State 26

    7 variables: type TK_ID assignment . more_variables TK_SEMICOLON
   26 more_variables: . %empty  [TK_SEMICOLON]
   27               | . TK_COMMA TK_ID assignment more_variables
   28               | . TK_COMMA TK_ID more_variables

    TK_COMMA  shift, and go to state 25

    $default  reduce using rule 26 (more_variables)

    more_variables  go to state 43


State 27

    6 variables: type TK_ID more_variables . TK_SEMICOLON

    TK_SEMICOLON  shift, and go to state 44


State 28

    9 variables: TK_KW_STATIC type TK_ID assignment . more_variables TK_SEMICOLON
   26 more_variables: . %empty  [TK_SEMICOLON]
   27               | . TK_COMMA TK_ID assignment more_variables
   28               | . TK_COMMA TK_ID more_variables

    TK_COMMA  shift, and go to state 25

    $default  reduce using rule 26 (more_variables)

    more_variables  go to state 45


State 29

    8 variables: TK_KW_STATIC type TK_ID more_variables . TK_SEMICOLON

    TK_SEMICOLON  shift, and go to state 46


State 30

   32 function_variables: type . TK_ID function_variables_list

    TK_ID  shift, and go to state 47


State 31

   30 function: TK_KW_VOID TK_ID TK_OPEN_PARENTHESIS function_variables . TK_CLOSE_PARENTHESIS TK_KW_BEGIN function_body TK_KW_END

    TK_CLOSE_PARENTHESIS  shift, and go to state 48


State 32

   25 characters: TK_CONST_STR .
